[package]
name = "tama_db"
version = "0.1.0"
authors = ["lemonhx <lemonhx@lemonhx.tech>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "libtamadb"
path = "src/lib.rs"

[[bin]]
name = "tamadb"
path = "src/main.rs"



[dependencies]
crossbeam-epoch = "0.9"
memmap = "0.7"
smallvec = {version = "1.6", features = ["union"]}

bytes = "1.0"
enum_dispatch = "0.3"